- Añadido carrusel emergente al presionar sobre nosotros en el navbar - Añadidas las imagenes para el carrusel emergente - añadida funcionalidad al link con id: sobre-click para mostrar carrusel emergente

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Nuestros Productos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="#" id="sobre">Sobre Nosotros</a>
+                        <a class="nav-link active" href="#" id="sobre-click">Sobre Nosotros</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" href="#comuniquemonos" onclick="showComu()">Comuniquemonos</a>
@@ -41,6 +41,43 @@
             <!-- <p><span id="s">this is an extra small screen  </span><span id="m">this is a small screen  </span>
                 <span id="l">this is a medium screen </span><span id="xl">this is a large screen</span>
             </p> -->
+
+            <div class="carta-above z-1" id="sobre-above">
+              <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <h1>Nimrodel Pub Restaurant</h1>
+                    <p class="px-5">Nimrodel Significa "dama de la cueva blanca". Fue una
+                      elfa silvana que vivió durante la Tercera Edad del Sol en el
+                      bosque de Lothlórien. En honor a su nombre, se acuña
+                      Nimrodel al río que nace en las Montañas Nubladas</p>
+                    <img src="./assets/imagenes/Carrusel-sobre/IMG2.jpg" class="d-block w-50 mx-auto" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <h1>Nimrodel Pub Restaurant</h1>
+                    <p class="px-5 mt-5 fs-5">Nimrodel Pub Restaurant es un oasis de calma y diversión, lleno de rincones acogedores 
+                      en donde se resalta la belleza de su decoración élfica. 
+                      Es un lugar ideal para visitar solo o acompañado, disfrutar una tarde con amigos, terminar 
+                      el día después del trabajo o almorzar con tu familia. 
+                      Puedes probar nuestras tradicionales tablas, en todas sus variedades y que nos han 
+                      otorgado reconocimiento dentro de la cultura gastronómica. 
+                      También puedes disfrutar nuestras cervezas de fabricación propia, con sabores que te 
+                      llevarán a un mágico mundo.</p>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/imagenes/Carrusel-sobre/IMG1.jpg" class="d-block w-50 mx-auto" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </div>
 
             <h2 class="m-3">Destacados de la semana</h2>
 
